# qLib

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: config.cmake  install.cmake  qlibConfig.cmake.in  spdlog.cmake  tests.cmake
include/: QException.h  QImage.h  QLoader.h  QLog.h  QModel.h  QModule.h  QObject.h  QOnnxRuntime.h  QProgressBar.h  QSingletonProductor.h  QTensor.h  QTimeProfile.h
scripts/: compile.py  downloader.py
src/: QImage.cpp  QObject.cpp  QOnnxRuntime.cpp
tests/: exception_test.cpp
